Fix align of version in settings modal

--- a/main.css
+++ b/main.css
@@ -311,7 +311,3 @@ svg.unmaximize-svg {
     bottom: 10px;
     cursor: pointer;
 }
-
-.version {
-    margin-right: 225px;
-}
